Continue polish/refactor. Focus on MapPoint and Builder.